chore: Add gradle maven publish plugin.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,28 @@
-org.gradle.configureondemand=true
-org.gradle.caching=true
-org.gradle.parallel=true
+GROUP=com.paligot.kighlighter
+VERSION_NAME=1.0.0-SNAPSHOT
+
+POM_INCEPTION_YEAR=2021
+POM_URL=https://github.com/GerardPaligot/kighlighter/
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_SCM_URL=https://github.com/GerardPaligot/kighlighter/
+POM_SCM_CONNECTION=scm:git:git://github.com/GerardPaligot/kighlighter.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/GerardPaligot/kighlighter.git
+
+POM_DEVELOPER_ID=GerardPaligot
+POM_DEVELOPER_NAME=Gerard Paligot
+
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.cache=true
+
 android.useAndroidX=true
+
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.incremental=true
+kotlin.code.style=official
